--- a/README
+++ b/README
@@ -1,12 +1,12 @@
-### Date created
+### Date created  _italic_
 The project was completed on a date (31-novamber-2019)
 ---
 
-### Project Title
+### Project Title  _italic_
 **Bike Share Data**
 ---
 
-### Description
+### Description  _italic_
 Python Script to Explore US Bikeshare Data
 This Python script is written for Project of Udacity's Programming for Data Science
 and is used to explore data related to bike share systems for Chicago, New York City, and Washington.
@@ -15,7 +15,7 @@ Two libraries were used to construct the project
 It also takes in users' raw input to create an interactive experience in the terminal to present these statistics.
 ---
 
-### Credits
+### Credits  _italic_ 
 * https://www.geeksforgeeks.org/python-numpy/
 * https://www.geeksforgeeks.org/python-pandas-dataframe-series-head-method/
 * https://www.geeksforgeeks.org/isupper-islower-lower-upper-python-applications/
